Bug 218699 - linux: pid 20830 (grep): syscall splice not implemented
Summary: linux: pid 20830 (grep): syscall splice not implemented
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: Edward Tomasz Napierala
URL:
Keywords:
Depends on:
Blocks: 247219
  Show dependency treegraph
 
Reported: 2017-04-17 11:18 UTC by Andriy Voskoboinyk
Modified: 2020-09-01 12:56 UTC (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andriy Voskoboinyk freebsd_committer freebsd_triage 2017-04-17 11:18:14 UTC
Affects newer GNU grep versions in /compat/linux root:
# echo test | grep test > /dev/null
grep: (standard input): Function not implemented
(dmesg: "linux: pid 20833 (grep): syscall splice not implemented")
# grep --version | head -n 1
grep (GNU grep) 2.27
Comment 1 Edward Tomasz Napierala freebsd_committer freebsd_triage 2020-07-12 15:24:59 UTC
https://reviews.freebsd.org/D25636
Comment 2 commit-hook freebsd_committer freebsd_triage 2020-07-18 11:29:32 UTC
A commit references this bug:

Author: trasz
Date: Sat Jul 18 11:28:42 UTC 2020
New revision: 363304
URL: https://svnweb.freebsd.org/changeset/base/363304

Log:
  Add a trivial linux(4) splice(2) implementation, which simply
  returns EINVAL.  Fixes grep (grep-3.1-2build1).

  PR:		kern/218699
  Reported by:	avos
  Reviewed by:	emaste
  MFC after:	2 weeks
  Sponsored by:	The FreeBSD Foundation
  Differential Revision:	https://reviews.freebsd.org/D25636

Changes:
  head/sys/amd64/linux/linux_dummy.c
  head/sys/amd64/linux/syscalls.master
  head/sys/amd64/linux32/linux32_dummy.c
  head/sys/amd64/linux32/syscalls.master
  head/sys/arm64/linux/linux_dummy.c
  head/sys/arm64/linux/syscalls.master
  head/sys/compat/linux/linux_file.c
  head/sys/i386/linux/linux_dummy.c
  head/sys/i386/linux/syscalls.master
Comment 3 commit-hook freebsd_committer freebsd_triage 2020-09-01 12:09:29 UTC
A commit references this bug:

Author: trasz
Date: Tue Sep  1 12:09:15 UTC 2020
New revision: 365034
URL: https://svnweb.freebsd.org/changeset/base/365034

Log:
  MFC r363304:

  Add a trivial linux(4) splice(2) implementation, which simply
  returns EINVAL.  Fixes grep (grep-3.1-2build1).

  PR:		218699
  Sponsored by:	The FreeBSD Foundation

Changes:
_U  stable/12/
  stable/12/sys/amd64/linux/linux_dummy.c
  stable/12/sys/amd64/linux/syscalls.master
  stable/12/sys/amd64/linux32/linux32_dummy.c
  stable/12/sys/amd64/linux32/syscalls.master
  stable/12/sys/arm64/linux/linux_dummy.c
  stable/12/sys/arm64/linux/syscalls.master
  stable/12/sys/compat/linux/linux_file.c
  stable/12/sys/i386/linux/linux_dummy.c
  stable/12/sys/i386/linux/syscalls.master