Add a trivial linux(4) splice(2) implementation, which simply returns EINVAL.  Fixes grep (grep-3.1-2build1).

PR:		kern/218699
Reported by:	avos
Reviewed by:	emaste
MFC after:	2 weeks
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D25636


git-svn-id: svn+ssh://svn.freebsd.org/base/head@363304 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f